# lindera-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  bundle.js
.github/workflows/: periodic.yml  regression.yml  release.yml
lindera-wasm/: package-lock.json  package.json
lindera-wasm/src/: index.js
performance/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
performance/scripts/: build.js
src/: lib.rs
