[package]
name = "lindera-wasm"
version = "1.1.1"
edition = "2024"
description = "A morphological analysis library for WebAssembly."
documentation = "https://docs.rs/lindera-wasm"
homepage = "https://github.com/lindera/lindera-wasm"
repository = "https://github.com/lindera/lindera-wasm"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "wasm", "webassembly"]
categories = ["text-processing"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
embedded-ipadic = [
    "lindera/embedded-ipadic",
] # Embed IPADIC dictionary (Japanese)
embedded-unidic = [
    "lindera/embedded-unidic",
] # Embed UniDic dictionary (Japanese)
embedded-ko-dic = ["lindera/embedded-ko-dic"] # Embed ko-dic dictionary (Korean)
embedded-cc-cedict = [
    "lindera/embedded-cc-cedict",
] # Embed CC-CEDICT dictionary (Chinese)
embedded-cjk = [
    "lindera/embedded-cjk",
] # Embed IPADIC dictionary (Japanese), ko-dic dictionary (Korean), CC-CEDICT dictionary (Chinese)
default = []

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.104" }
js-sys = "0.3.81"

lindera = "1.3.2"

[dev-dependencies]
serde_json = "1.0.145"
wasm-bindgen-test = "0.3.51"
wasm-bindgen = { version = "0.2.101" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
