[package]
name = "lindera-wasm"
version = "1.2.2"
edition = "2024"
description = "A morphological analysis library for WebAssembly."
documentation = "https://docs.rs/lindera-wasm"
homepage = "https://github.com/lindera/lindera-wasm"
repository = "https://github.com/lindera/lindera-wasm"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "wasm", "webassembly"]
categories = ["text-processing"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
embedded-ipadic = [
    "lindera/embedded-ipadic",
] # Embed IPADIC dictionary (Japanese)
embedded-unidic = [
    "lindera/embedded-unidic",
] # Embed UniDic dictionary (Japanese)
embedded-ko-dic = ["lindera/embedded-ko-dic"] # Embed ko-dic dictionary (Korean)
embedded-cc-cedict = [
    "lindera/embedded-cc-cedict",
] # Embed CC-CEDICT dictionary (Chinese)
embedded-cjk = [
    "lindera/embedded-cjk",
] # Embed IPADIC dictionary (Japanese), ko-dic dictionary (Korean), CC-CEDICT dictionary (Chinese)
default = []

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.106" }
js-sys = "0.3.83"

lindera = "1.4.2"

[dev-dependencies]
serde_json = "1.0.148"
wasm-bindgen-test = "0.3.56"
wasm-bindgen = { version = "0.2.106" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
