[package]
name = "lindera-wasm"
version = "2.0.0"
edition = "2024"
description = "A morphological analysis library for WebAssembly."
documentation = "https://docs.rs/lindera-wasm"
homepage = "https://github.com/lindera/lindera-wasm"
repository = "https://github.com/lindera/lindera-wasm"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "wasm", "webassembly"]
categories = ["text-processing"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
embed-ipadic = [
    "lindera/embed-ipadic",
] # Embed IPADIC dictionary (Japanese)
embed-unidic = [
    "lindera/embed-unidic",
] # Embed UniDic dictionary (Japanese)
embed-ko-dic = ["lindera/embed-ko-dic"] # Embed ko-dic dictionary (Korean)
embed-cc-cedict = [
    "lindera/embed-cc-cedict",
] # Embed CC-CEDICT dictionary (Chinese)
embed-cjk = [
    "lindera/embed-cjk",
] # Embed IPADIC dictionary (Japanese), ko-dic dictionary (Korean), CC-CEDICT dictionary (Chinese)
default = []

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.106" }
js-sys = "0.3.83"

lindera = "2.0.1"

[dev-dependencies]
serde_json = "1.0.149"
wasm-bindgen-test = "0.3.56"
wasm-bindgen = { version = "0.2.106" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
